--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WebRTC Video conference</title>
+        <title>LoveYard Video Chat app</title>
         <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
         <link rel="stylesheet" href="css/main.css" />
     </head>
 
     <body>
-        <h1></h1>
+        <h1>LoveYard : Spreading Love Worldwide Now with Video Chat</h1>
 
-        <label for="roomId">Room ID</label>
+        <label for="roomId">Interest</label>
         <input id="roomId" type="text" />
         <button id="joinBtn">Join</button>
         <button id="leaveBtn">Leave</button>
